@@ -520,6 +520,7 @@
       |  Main profile
       |  used to test easily CRaSH
       |  to use it "mvn test -Pmain", used mainly in shell/core, shell/telnet, shell/ssh and jcr modules
+      |  export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"
       -->
     <profile>
       <id>main</id>
